--- a/ModularWeb.Authentication/ModularWeb.Authentication.csproj
+++ b/ModularWeb.Authentication/ModularWeb.Authentication.csproj
@@ -5,6 +5,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="AspNetCore.Identity.MongoDbCore" Version="1.1.1" />
       <PackageReference Include="ExtCore.Mvc.Infrastructure" Version="4.0.0" />
       <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="2.2.0" />
     </ItemGroup>
